gcc/testsuite/go.dg/err-1.go
// { dg-do compile }

package main

func main() {
  var ret;		// { dg-error "expected type" }
}
